# synergy

Practice_tasks_2026/case_4/: CMakeLists.txt  README.md
Practice_tasks_2026/case_4/src/: binary_tree.h  heap.h  queue.h
Practice_tasks_2026/case_4/tests/: test_heap.cpp  test_queue.cpp  test_tree.cpp
Practice_tasks_2026/case_5/: README.md  generate_page.py  index.html
